Canvas color bug on safari

--- a/feelhub-web/src/main/webapp/static/css/dashboard.less
+++ b/feelhub-web/src/main/webapp/static/css/dashboard.less
@@ -132,15 +132,15 @@ body {
             .rounded;
           }
 
-          canvas.good, img.good {
+          img.good {
             background-color: @good !important;
           }
 
-          canvas.bad, img.bad {
+          img.bad {
             background-color: @bad !important;
           }
 
-          canvas.neutral, img.neutral {
+          img.neutral {
             background-color: @neutral !important;
           }
 
